tdf#143660 Make color scheme names translatable

The color scheme names defined in UI.xcu are currently not translatable.

This patch makes them translatable by mapping the names in the UI.xcu file to a translated string.

Change-Id: I10ab3bbcc9b028955c3c179558f8040b3b1d6c9d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145732
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins